Video: fixed overflow issue with video description on smaller browsers. Added vanilla tooltips to buttons that set the channel filter. Some code cleanup.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -611,7 +611,8 @@ body #page-header #header-wrapper #credit {
 #video .video-desc {
   clear: both;
   padding: 1em;
-  border-top: 1px solid #E7E7E7; }
+  border-top: 1px solid #E7E7E7;
+  overflow-x: scroll; }
 
 #video iframe {
   display: block;
