--- a/src/scss/_video.scss
+++ b/src/scss/_video.scss
@@ -1,4 +1,3 @@
-
 #video {
 	.view-area-header, 
 	.video-title, 
@@ -24,13 +23,13 @@
 
 	.video-info-label {
 		display: inline-block;
-		// margin-right: 1em;
 	}
 
 	.video-desc {
 		clear: both;
 		padding: 1em;
 		border-top: 1px solid $border-grey;
+		overflow-x: scroll;
 	}
 
 	iframe {
@@ -43,11 +42,6 @@
 
 @media screen and ($tablet){
 	#video {
-		// p, 
-		// .channel-info {
-		// // .published-info 
-		// 	text-align: left;
-		// }
 
 		.video-info-row {
 			margin: 1em 0;
